# streamlit-tongyi

./: .env  .gitignore  Dockerfile  README.md  app.py  bot.py  pyproject.toml  requirements.txt  server.py
.streamlit/: secrets.toml
factory/: base.py  client.py  cmdi.py  tongyi.py
functions/: availability.py  neo4disease.py  prompt.py  test.py
llms/: __init__.py  basic.py  cmdi.py  memory.py  model.py  tongyi.py
llms/custom/: cmdi.py
page_md/: main.md
tools/: dbhelper.py
ui/: basic.py  dashscope.py  main.py  memory_test.py  mmm.py  rag_test.py  search_test.py  update_basic.py
ui/cmdi/: basic.py  intent_basic.py  update_basic.py
ui/tongyi/: basic.py  update_basic.py
upload/: example.txt
utils/: __init__.py  chat_render.py  common.py  config.py  db_manager.py  embeddings_manager.py  file_manager.py  openai.py  page_content.py  rag_manager.py  redis_cache.py
vo/: __init__.py  ele_item.py  obj_item.py
workflow/: example.py
