[project]
name = "tongyibot"
version = "0.4.0"
description = ""
authors = [
    {name = "sakebow",email = "71987856@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "dashscope (>=1.22.1,<2.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "html2text (>=2024.2.26,<2025.0.0)",
    "langchain (>=0.3.16,<0.4.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "playwright (>=1.49.1,<2.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "langgraph (>=0.2.68,<0.3.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "neo4j (>=5.27.0,<6.0.0)",
    "pymilvus (>=2.5.4,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tongyibot"
packages = [
    { include = "utils" },
    { include = "llms" },
    { include = "ui" }
]